[package]
name = "ticker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }

clap = { version = "4.5.60", features = ["derive"] }
croner = { version = "3.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
color-eyre = { version = "0.6" }
arc-swap = { version = "1.8" }
ctrlc = { version = "3.5" }

chrono = { version = "0.4.44" }
chrono-tz = { version = "0.10", features = ["serde"] }
iana-time-zone = { version = "0.1" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = { version = "0.2" }

sentinel = { git = "ssh://git@github.com/balaenaquant/sentinel.git", features = [
    "serde",
] }
threadpool = { git = "ssh://git@github.com/marcustut/threadpool.git" }
